--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "react-virtuoso": "^4.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
